Add mutation observer

--- a/src/app.html
+++ b/src/app.html
@@ -9,4 +9,23 @@
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents" id="kit-body">%sveltekit.body%</div>
 	</body>
+	<script>
+		// Callback function to execute when mutations are observed
+		const callback = (mutationList, observer) => {
+			for (const mutation of mutationList) {
+				console.log(mutation);
+			}
+		};
+
+		// Create an observer instance linked to the callback function
+		const observer = new MutationObserver(callback);
+
+		// Start observing the target node for configured mutations
+		observer.observe(document.getElementById('kit-body'), {
+			attributes: true,
+			childList: true,
+			subtree: true,
+			attributeOldValue: true
+		});
+	</script>
 </html>
